<resources>
    <string name="app_name">Android_1_01</string>
    <string name="MyTextView">MyTextView</string>
    <string name="MyEditText">MyEditText</string>
    <string name="MyButton">MyButton</string>
    <string name="MySwitch">MySwitch</string>
    <string name="MyCheckBox">MyCheckBox</string>
    <string name="MyToggleButtonOn">Скрыть календарь</string>
    <string name="MyToggleButtonOff">Показать календарь</string>
    <string name="MyToggleButton">MyToggleButton</string>
</resources>